--- a/index.html
+++ b/index.html
@@ -30,27 +30,29 @@
             </ul>
         </nav>
     </header>
-    <section>
-        <div>
+    <section class="hero">
+        <div class="hero-form">
             <h3>Get Started Today</h3>
             <p>Fill out this form and one of our trainers will shchedule a consult</p>
         <form>
             <label for="name">Enter full name:</label>
-            <input type="text" placeholder="Your Name" name="name" id="name" />
+            <input type="text" placeholder="Your Name" name="name" id="name" class="form-input" >
             <label for="email">Enter your email address:</label>
-            <input type="email" placeholder="Email Address" name="email" id="email" />
+            <input type="email" placeholder="Email Address" name="email" id="email" class="form-input" >
             <label for="phone">Enter your phone number:</label>
-            <input type="tel" placeholder="Phone number" name="phone" id="phone" />
+            <input type="tel" placeholder="Phone number" name="phone" id="phone" class="form-input" >
             <p>
                 Have you worked out with a trainer before?
-                <input type="radio" name="trainer-confirm" id="trainer-yes" />
+                <input type="radio" name="trainer-confirm" id="trainer-yes" >
                 <label for="trainer-yes">Yes</label>
-                <input type="radio" name="trainer-confirm" id="trainer-no" />
+                <input type="radio" name="trainer-confirm" id="trainer-no" >
                 <label for="trainer-no">No</label>
             </p>
             <p>
-                <label for="age-button">I acknowledge that I am at least 18 years of age.</label>
-                <input type="radio" name="age-confirm" id="age-button" />
+                <label for="checkbox">
+                    I acknowledge that I am at least 18 years of age.
+                </label>
+                <input type="checkbox" name="age-confirm" id="checkbox" />
             </p>
             <button type="submit">
                 Get running!
