--- a/index.html
+++ b/index.html
@@ -148,16 +148,39 @@
     <!-- "reach out" section-->
     <section>
         <h2>Reach Out</h2>
+        <div class="contact-info">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d23273.085289638137!2d-85.21062894312372!3d35.17565660463098!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1650208511553!5m2!1sen!2sus"
+            width="400"
+            height="400"
+            style="border: 0;"
+            allowfullscreen=""
+            loading="lazy">
+            </iframe>
+        </div>
+
+        <div>
+            <h3>Run Buddy</h3>
+            <p>
+                Any questions or concerns before signing up?
+                <br />
+                Let us know and we'll be happy to talk to you!
+            </p>
+            <address>
+                55 Main Street <br />
+                Some Town, Ca <br />
+                12345 <br />
+                P: 555.RUN.BUDZ (555.786.2839) <br />
+                E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
+            </address>
+        </div>
     </section>
 
     <!-- footer -->
     <footer>
-        <h2> Made with love by Run Buddy.</h2>
-        <div>
-            <a href="#">Read Our Privacy Policy</a><br />
-            &copy; 2019 Run Buddy, Inc.
-        </div>
+        <h3> Made with love by Run Buddy.</h3>
+            <div>
+                <a href="#">Read Our Privacy Policy</a><br />
+                &copy; 2019 Run Buddy, Inc.
+            </div>
     </footer>
 </html>
-
-<!-- this is a test line -->
