--- a/index.html
+++ b/index.html
@@ -146,8 +146,8 @@
     </section>
 
     <!-- "reach out" section-->
-    <section>
-        <h2>Reach Out</h2>
+    <section id="reach-out" class="contact">
+        <h2 class="section-title secondary-border">Reach Out</h2>
         <div class="contact-info">
             <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d23273.085289638137!2d-85.21062894312372!3d35.17565660463098!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1650208511553!5m2!1sen!2sus"
             width="400"
