--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <ul>
                 <!-- list item element -->
                 <li>
-                    <!-- achor element-->
+                    <!-- anchor element-->
                     <a href="#what-we-do">What We Do</a>
                 </li>
                 <li>
@@ -179,7 +179,7 @@
     <footer>
         <h3> Made with love by Run Buddy.</h3>
             <div>
-                <a href="#">Read Our Privacy Policy</a><br />
+                <a href="./privacy-policy.html">Read Our Privacy Policy</a><br />
                 &copy; 2019 Run Buddy, Inc.
             </div>
     </footer>
