--- a/index.html
+++ b/index.html
@@ -30,7 +30,16 @@
             </ul>
         </nav>
     </header>
+  
     <section class="hero">
+          
+    <div class="hero-cta">
+        <h2>Start Building Habits.</h2>
+        <p>
+            Lorem ipsum text placeholder.
+        </p>
+    </div>
+    
         <div class="hero-form">
             <h3>Get Started Today</h3>
             <p>Fill out this form and one of our trainers will shchedule a consult</p>
