--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -5,6 +5,7 @@
         <title>Privacy Policy - Run Buddy</title>
         <link rel="stylesheet" href="./assets/css/styles.css">
         <link rel="secondarystylesheet" href="./assets/css/secondary-styles.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     </head>
     
     <body>
